--- a/ERPWeb/Views/AgroConfiguration/GetStockiestList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetStockiestList.cshtml
@@ -761,8 +761,8 @@
                 $("#custom-tabs-two-StockiestList").addClass('active');
                 $("#custom-tabs-two-StockiestList-tab").addClass('active');
 
-                $("#custom-tabs-two-StockiestList-tab").removeClass('active');
-                $("#custom-tabs-two-StockiestList").removeClass('active');
+                $("#custom-tabs-two-Zone-tab").removeClass('active');
+                $("#custom-tabs-two-Zone").removeClass('active');
 
             }
             $('.select2').select2();
@@ -925,8 +925,8 @@
                 $("#custom-tabs-two-Territory").addClass('active');
                 $("#custom-tabs-two-Territory-tab").addClass('active');
 
-                $("#custom-tabs-two-StockiestList-tab").removeClass('active');
-                $("#custom-tabs-two-StockiestList").removeClass('active');
+                $("#custom-tabs-two-Zone-tab").removeClass('active');
+                $("#custom-tabs-two-Zone").removeClass('active');
 
             }
             $('.select2').select2();
@@ -1086,11 +1086,11 @@
 
         $(document).ready(function () {
             if ($("#tab").val() == 'Area') {
-                $("#custom-tabs-two-Area").addClass('active');
+                $("#custom-tabs-two-Area").addClass('active'); 
                 $("#custom-tabs-two-Area-tab").addClass('active');
 
-                $("#custom-tabs-two-StockiestList-tab").removeClass('active');
-                $("#custom-tabs-two-StockiestList").removeClass('active');
+                $("#custom-tabs-two-Zone-tab").removeClass('active');
+                $("#custom-tabs-two-Zone").removeClass('active');
 
             }
 
@@ -1215,8 +1215,8 @@
                 $("#custom-tabs-two-Region").addClass('active');
                 $("#custom-tabs-two-Region-tab").addClass('active');
 
-                $("#custom-tabs-two-StockiestList-tab").removeClass('active');
-                $("#custom-tabs-two-StockiestList").removeClass('active');
+                $("#custom-tabs-two-Zone-tab").removeClass('active');
+                $("#custom-tabs-two-Zone").removeClass('active');
 
             }
 
@@ -1379,8 +1379,8 @@
                 $("#custom-tabs-two-Division").addClass('active');
                 $("#custom-tabs-two-Division-tab").addClass('active');
 
-                $("#custom-tabs-two-StockiestList-tab").removeClass('active');
-                $("#custom-tabs-two-StockiestList").removeClass('active');
+                $("#custom-tabs-two-Zone-tab").removeClass('active');
+                $("#custom-tabs-two-Zone").removeClass('active');
 
             }
 
