--- a/ERPWeb/Views/AgroConfiguration/Zonelist.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/Zonelist.cshtml
@@ -10,7 +10,7 @@
         <div class="card  shadow card  card-outline card-tabs" style="margin-top:-30px">
             <ul class="nav nav-tabs nav-pills bg-navy" id="custom-tabs-two-tab" role="tablist">
                 <li class="nav-item">
-                    <a class="nav-link active text-white" id="custom-tabs-two-StockiestList-tab" data-toggle="pill" href="#custom-tabs-two-StockiestList" role="tab" aria-controls="custom-tabs-two-StockiestList" aria-selected="false">Stockiest</a>
+                    <a class="nav-link text-white" id="custom-tabs-two-StockiestList-tab" data-toggle="pill" href="#custom-tabs-two-StockiestList" role="tab" aria-controls="custom-tabs-two-StockiestList" aria-selected="false">Stockiest</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" id="custom-tabs-two-Territory-tab" data-toggle="pill" href="#custom-tabs-two-Territory" role="tab" aria-controls="custom-tabs-two-Territory" aria-selected="true">Territory</a>
@@ -25,7 +25,7 @@
                     <a class="nav-link text-white" id="custom-tabs-two-Division-tab" data-toggle="pill" href="#custom-tabs-two-Division" role="tab" aria-controls="custom-tabs-two-Division" aria-selected="true">Division</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" id="custom-tabs-two-Zone-tab" data-toggle="pill" href="#custom-tabs-two-Zone" role="tab" aria-controls="custom-tabs-two-Zone" aria-selected="true">Zone</a>
+                    <a class="nav-link active text-white" id="custom-tabs-two-Zone-tab" data-toggle="pill" href="#custom-tabs-two-Zone" role="tab" aria-controls="custom-tabs-two-Zone" aria-selected="true">Zone</a>
                 </li>
 
             </ul>
