--- a/ERPWeb/Views/AgroConfiguration/_GetMeasurementList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetMeasurementList.cshtml
@@ -7,8 +7,8 @@
         <thead class="btn-dark">
             <tr class="text-center text-bold">
                 <th style="vertical-align:middle">SL</th>
-                <th style="vertical-align:middle">MeasureMent Name</th>
-                <th style="vertical-align:middle">MeasureMent Item</th>
+                <th style="vertical-align:middle">Pack Name</th>
+                <th style="vertical-align:middle">Pack Size</th>
                 <th class="hide" style="vertical-align:middle">UnitName</th>
                 <th style="vertical-align:middle">Status</th>
                 <th style="vertical-align:middle">Action</th>
