--- a/ERPWeb/Views/AgroConfiguration/CreateMeasurement.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateMeasurement.cshtml
@@ -20,7 +20,7 @@
                                 </a>
                             </div>
                             <div class="col-md-6 text-center">
-                                <h6 class="text-center text-white text-bold mb-0">Create Measurement</h6>
+                                <h6 class="text-center text-white text-bold mb-0">Create Pack</h6>
                             </div>
 
                             <div class="col-md-2">
@@ -46,9 +46,9 @@
             <div class="row " style="margin-top:-18px;">
 
                 <div class="col-md-2">
-                    <label class="control-label font-weight-bold " for="txtmeasurementName">Measurement Name<span style="color:red">*</span></label>
-                    <input type="text" placeholder="MeasurmentName" name="measurementName" id="txtmeasurementName" class="form-control form-control-sm" autofocus="autofocus" />
-                    <span class="error hide req-txtmeasurementName">Measurement Name is required</span>
+                    <label class="control-label font-weight-bold " for="txtmeasurementName">Pack Name<span style="color:red">*</span></label>
+                    <input type="text" placeholder="Pack Name" name="measurementName" id="txtmeasurementName" class="form-control form-control-sm" autofocus="autofocus" />
+                    <span class="error hide req-txtmeasurementName">Pack Name is required</span>
                 </div>
                 <div class="col-md-2">
                     <label class="control-label font-weight-bold " for="masterBox">Master Box</label>
@@ -95,8 +95,8 @@
 
                                 <tr class="btn-dark text-center">
                                     <th class="text-center">Sl</th>
-                                    <th class="text-center">MeasureMent Name</th>
-                                    <th class="text-center">MeasureMent Item</th>
+                                    <th class="text-center">Pack Name</th>
+                                    <th class="text-center">Pack Item</th>
                                     <th class="text-center">Unit</th>
                                     <th class="text-center">Action</th>
                                 </tr>
