--- a/ERPWeb/Views/AgroConfiguration/_GetAccessoriesList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAccessoriesList.cshtml
@@ -12,7 +12,7 @@
                 <tr class="text-center">
                     <th style="vertical-align:middle">#SL</th>
                     <th style="vertical-align:middle" class="hide"></th>
-                    <th style="vertical-align:middle">Accessories Name</th>
+                    <th style="vertical-align:middle">Gift Name</th>
                     <th style="vertical-align:middle">Status</th>
                     <th style="vertical-align:middle">Action</th>
                 </tr>
