--- a/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
@@ -46,7 +46,7 @@
                     <a class="nav-link  text-white  " id="custom-tabs-two-packageRMStock-tab" data-toggle="pill" href="#custom-tabs-two-packageRMStock" role="tab" aria-controls="custom-tabs-two-packageRMStock" aria-selected="false">Packaging Stock</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link   text-white  " id="custom-tabs-two-RMqtyprices-tab" data-toggle="pill" href="#custom-tabs-two-RMqtyprices" role="tab" aria-controls="custom-tabs-two-RMqtyprices" aria-selected="false">RM Stock Price Value</a>
+                    <a class="nav-link   text-white  " id="custom-tabs-two-RMqtyprices-tab" data-toggle="pill" href="#custom-tabs-two-RMqtyprices" role="tab" aria-controls="custom-tabs-two-RMqtyprices" aria-selected="false">Material Stock Price Value</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white   " id="custom-tabs-two-pstockrawmaterialList-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialList" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialList" aria-selected="false">Purchase Details</a>
@@ -403,7 +403,7 @@
                                 <div class="row text-sm">
                                     <div class="col-3">
                                         <h6 class="text-left  text-white mb-0" @*style="height:10px;text-align:center"*@>
-                                            RawMaterial Stock Price
+                                            Material Stock Price
                                         </h6>
                                     </div>
 
